--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Szkoła Języka Polskiego im. św. Siostry Faustyny w Slough</title>
+	<meta name="description"
+		content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough rozpocznie swoja dzialalnosc we wrzesniu 2021 przy Polskiej Parafii w Slough.">
+	<meta property="og:title" content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough">
+	<meta property="og:description"
+		content="Szkola Języka Polskiego im. św. Siostry Faustyny w polskim kościele w Slough.">
+	<meta property="og:image"
+		content="https://static.wixstatic.com/media/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png/v1/fill/w_500,h_500,al_c/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png">
+	<meta property="og:image:width" content="500">
+	<meta property="og:image:height" content="500">
+	<meta property="og:url" content="https://www.szkolajezykapolskiegoslough.org">
+	<meta property="og:site_name" content="Szkola Języka Polskiego Slough">
+	<meta property="og:type" content="website">
+	<meta name="twitter:description"
+		content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough rozpocznie swoja dzialalnosc we wrzesniu 2021 przy Polskiej Parafii w Slough.">
+	<meta name="twitter:image"
+		content="https://static.wixstatic.com/media/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png/v1/fill/w_500,h_500,al_c/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png">
+	<link rel="canonical" href="https://www.szkolajezykapolskiegoslough.org/" />
+
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
