Working on the navigation, nav ul and slogan

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
 
 <body>
 
+	<!-- Navigation -->
+	<nav class="navigation">
+
+		<div class="slogan">
+			<h1>Szkola Jezyka Polskiego im. sw. Siostry Faustyny w Slough</h1>
+		</div>
+
+		<ul class='nav-ul'>
+			<li class='nav-li'>Strona Glowna</li>
+			<li class='nav-li'>Faustyna Kowalska</li>
+			<li class='nav-li'>Kalendarz</li>
+			<li class='nav-li'>Oplaty</li>
+			<li class='nav-li'>O nas</li>
+			<li class='nav-li'>Kontakt</li>
+		</ul>
+	</nav>
+
 </body>
 
 </html>
