--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta name="twitter:image"
 		content="https://static.wixstatic.com/media/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png/v1/fill/w_500,h_500,al_c/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png">
 	<link rel="canonical" href="https://www.szkolajezykapolskiegoslough.org/" />
-
+	<link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -31,17 +31,23 @@
 	<!-- Navigation -->
 	<nav class="navigation">
 
+		<!-- Slogan image -->
+		<img class='img img--slogan' src="./assets/img1.webp" alt="">
+
+		<!-- Slogan -->
 		<div class="slogan">
-			<h1>Szkola Jezyka Polskiego im. sw. Siostry Faustyny w Slough</h1>
+			<h1 class='h1'><span class='single-line'>Szkola Jezyka Polskiego</span> <span class="single-line">im. sw.
+					Siostry</span> Faustyny w Slough</h1>
 		</div>
 
-		<ul class='nav-ul'>
-			<li class='nav-li'>Strona Glowna</li>
-			<li class='nav-li'>Faustyna Kowalska</li>
-			<li class='nav-li'>Kalendarz</li>
-			<li class='nav-li'>Oplaty</li>
-			<li class='nav-li'>O nas</li>
-			<li class='nav-li'>Kontakt</li>
+		<!-- Nav links -->
+		<ul class='nav nav--ul'>
+			<li class='nav nav--li'>Strona Glowna</li>
+			<li class='nav nav--li'>Faustyna Kowalska</li>
+			<li class='nav nav--li'>Kalendarz</li>
+			<li class='nav nav--li'>Oplaty</li>
+			<li class='nav nav--li'>O nas</li>
+			<li class='nav nav--li'>Kontakt</li>
 		</ul>
 	</nav>
 
