Added header text and image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 	<nav class="navigation">
 
 		<!-- Slogan image -->
-		<img class='img img--slogan' src="./assets/img1.webp" alt="">
+		<div class="img__container img__container--slogan">
+			<img class='img img--slogan' src="./assets/img1.webp" alt="">
+		</div>
 
 		<!-- Slogan -->
 		<div class="slogan">
@@ -50,6 +52,27 @@
 			<li class='nav nav--li'>Kontakt</li>
 		</ul>
 	</nav>
+
+	<!-- Header -->
+	<header class='header'>
+
+		<!-- Image container -->
+		<div class="img__container img__container--header">
+			<img src="./assets/img-heading.webp" alt="" class="img img--header">
+		</div>
+
+		<div class="header__content">
+			<h2 class='h2'>O szkole</h2>
+			<p class='p'>
+				Nasza misja - wychowanie dzieci i młodzieży w duchu wartości chrześcijańskich oraz, kultywowanie
+				polskiej
+				tożsamości a przede wszystkim nauczanie języka polskiego, historii polski z elementami geografii,
+				religii.
+				Pielęgnowanie polskich tradycji, obyczajow i pięknej, bogatej kultury.
+			</p>
+		</div>
+
+	</header>
 
 </body>
 
