Btn styling on hover added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 				religii.
 				Pielęgnowanie polskich tradycji, obyczajow i pięknej, bogatej kultury.
 			</p>
+
+			<div class="btn__container">
+				<button class="btn">Czytaj Wiecej</button>
+			</div>
 		</div>
 
 	</header>
