--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
 
 		</section>
 
+		<!-- Section -->
+		<section class="section section--banner">
+
+			<!-- Banner -->
+			<div class="banner banner--1"></div>
+			<div class="banner banner--2"></div>
+			<div class="banner banner--3"></div>
+			<div class="banner banner--4"></div>
+
+		</section>
+
 	</main>
 
 </body>
