--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 		<!-- Slogan -->
 		<div class="slogan">
 			<a href="#">
-			<h1 class='h1'><span class='single-line'>Szkola Jezyka Polskiego</span> <span class="single-line">im. sw.
-					Siostry</span> Faustyny w Slough</h1>
-				</a>
+				<h1 class='h1'><span class='single-line'>Szkola Jezyka Polskiego</span> <span class="single-line">im.
+						sw.
+						Siostry</span> Faustyny w Slough</h1>
+			</a>
 		</div>
 
 		<!-- Nav links -->
@@ -88,17 +89,39 @@
 
 			<!-- Image container -->
 			<div class="img__container img__container--section">
-				<img class='img img--section' src="https://static.wixstatic.com/media/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.jpg/v1/fill/w_594,h_341,al_c,q_80,usm_0.66_1.00_0.01/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.webp" alt="">
+				<img class='img img--section'
+					src="https://static.wixstatic.com/media/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.jpg/v1/fill/w_594,h_341,al_c,q_80,usm_0.66_1.00_0.01/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.webp"
+					alt="">
 			</div>
 
 			<!-- Image container -->
 			<div class="img__container img__container--section img--margin">
-				<img class='img img--section'  src="https://static.wixstatic.com/media/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.webp" alt="">
+				<img class='img img--section'
+					src="https://static.wixstatic.com/media/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.webp"
+					alt="">
 			</div>
 
 			<!-- Image container -->
-			<div class="img__container img__container--section">
-				<img class='img img--section'  src="https://static.wixstatic.com/media/62e75bfd762f474ca9a42f40162ebc69.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/62e75bfd762f474ca9a42f40162ebc69.webp" alt="">
+			<div class="img__container img__container--section img__container--dark img__container--text">
+
+				<!-- Overlay over image -->
+				<div class="overlay">
+					<p class="p p--img">Swieta Siostra Faustyna</p>
+
+					<!-- Space around container -->
+					<div class="space-around">
+						<div class="img__container img__container--overlay">
+							<img src="./assets/logo.webp" alt="" class="img img--overlay">
+						</div>
+						<div class="btn__container btn__container--small">
+							<button class="btn btn--more">Czytaj wiecej</button>
+						</div>
+					</div>
+				</div>
+
+				<img class='img img--section'
+					src="https://static.wixstatic.com/media/62e75bfd762f474ca9a42f40162ebc69.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/62e75bfd762f474ca9a42f40162ebc69.webp"
+					alt="">
 			</div>
 
 		</section>
