Added text and fixed typos

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
 		<!-- Slogan -->
 		<div class="slogan">
 			<a href="#">
-				<h1 class='h1'><span class='single-line'>Szkola Jezyka Polskiego</span> <span class="single-line">im.
-						sw.
+				<h1 class='h1'><span class='single-line'>Szkoła Języka Polskiego</span> <span class="single-line">im.
+						św.
 						Siostry</span> Faustyny w Slough</h1>
 			</a>
 		</div>
 
 		<!-- Nav links -->
 		<ul class='nav nav--ul'>
-			<li class='nav nav--li'>Strona Glowna</li>
+			<li class='nav nav--li'>Strona Glówna</li>
 			<li class='nav nav--li'>Faustyna Kowalska</li>
 			<li class='nav nav--li'>Kalendarz</li>
-			<li class='nav nav--li'>Oplaty</li>
+			<li class='nav nav--li'>Opłaty</li>
 			<li class='nav nav--li'>O nas</li>
 			<li class='nav nav--li'>Kontakt</li>
 		</ul>
@@ -75,7 +75,7 @@
 			</p>
 
 			<div class="btn__container">
-				<button class="btn">Czytaj Wiecej</button>
+				<button class="btn">Czytaj Więcej</button>
 			</div>
 		</div>
 
@@ -106,7 +106,7 @@
 
 				<!-- Overlay over image -->
 				<div class="overlay">
-					<p class="p p--img">Swieta Siostra Faustyna</p>
+					<p class="p p--img">Święta Siostra Faustyna</p>
 
 					<!-- Space around container -->
 					<div class="space-around">
@@ -114,7 +114,7 @@
 							<img src="./assets/logo.webp" alt="" class="img img--overlay">
 						</div>
 						<div class="btn__container btn__container--small">
-							<button class="btn btn--more">Czytaj wiecej</button>
+							<button class="btn btn--more">Czytaj więcej</button>
 						</div>
 					</div>
 				</div>
