--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<!-- Nav links -->
 		<ul class='nav nav--ul'>
-			<li class='nav nav--li'>Strona Glówna</li>
+			<li class='nav nav--li'>Strona Główna</li>
 			<li class='nav nav--li'>Faustyna Kowalska</li>
 			<li class='nav nav--li'>Kalendarz</li>
 			<li class='nav nav--li'>Opłaty</li>
