--- a/index.html
+++ b/index.html
@@ -137,7 +137,33 @@
 
 		</section>
 
+		<section class='section section--background'>
+
+		</section>
+
 	</main>
+
+	<footer class="footer">
+
+		<div class="container container--left">
+			<p class="p p--secondary">
+				Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
+			</p>
+			<div class="btn__container">
+				<button class="btn btn--important">Zapłać za szkołe</button>
+			</div>
+		</div>
+
+		<div class="container container--center">
+			<p class='p p--secondary'>Facebook</p>
+		</div>
+
+		<div class="container container--right">
+			<p class="p p--secondary">Bądź na bieżąco!</p>
+		</div>
+
+		<hr class='hr' />
+	</footer>
 
 </body>
 
