Adding changes to the footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Slogan -->
 		<div class="slogan">
-			<a href="#">
+			<a href="#" class='a a--h1'>
 				<h1 class='h1'><span class='single-line'>Szkoła Języka Polskiego</span> <span class="single-line">im.
 						św.
 						Siostry</span> Faustyny w Slough</h1>
@@ -183,6 +183,14 @@
 		</div>
 
 		<hr class='hr' />
+
+		<div class="container container--copyright">
+			<p class="p p--secondary p--copyright">© 2021 by Szkoła Języka Polskiego Slough</p>
+			<p class="p p--secondary">Created by <a href='https://www.thepixelweb.co.uk' class='a' target='_blank'>Pixel
+					Web</a>
+			</p>
+		</div>
+
 	</footer>
 
 </body>
