--- a/index.html
+++ b/index.html
@@ -174,11 +174,25 @@
 			</div>
 
 			<div class="container container--center">
-				<p class='p p--secondary'>Facebook</p>
+				<p class='p p--secondary'><a
+						href='https://www.facebook.com/Szko%C5%82a-J%C4%99zyka-Polskiego-im-%C5%9Bw-Siostry-Faustyny-w-Slough-106881168296298'
+						class='a a--social' title='Facebook'>Facebook</a>
+				</p>
 			</div>
 
 			<div class="container container--right">
 				<p class="p p--secondary">Bądź na bieżąco!</p>
+
+				<!-- Form container -->
+				<form class="form">
+					<div class="input__container">
+						<input type="email" class="input" minlength="3" placeholder='Podaj swoj adres email' required>
+					</div>
+					<div class="btn__container btn__container--submit">
+						<button class="btn--submit">Gotowe</button>
+					</div>
+				</form>
+
 			</div>
 		</div>
 
@@ -186,7 +200,8 @@
 
 		<div class="container container--copyright">
 			<p class="p p--secondary p--copyright">© 2021 by Szkoła Języka Polskiego Slough</p>
-			<p class="p p--secondary">Created by <a href='https://www.thepixelweb.co.uk' class='a' target='_blank'>Pixel
+			<p class="p p--secondary">Strona stworzona przez <a href='https://www.thepixelweb.co.uk' class='a'
+					target='_blank' title='The Pixel Web'>Pixel
 					Web</a>
 			</p>
 		</div>
