Added banner content and styling

--- a/index.html
+++ b/index.html
@@ -130,10 +130,86 @@
 		<section class="section section--banner">
 
 			<!-- Banner -->
-			<div class="banner banner--1"></div>
-			<div class="banner banner--2"></div>
-			<div class="banner banner--3"></div>
-			<div class="banner banner--4"></div>
+			<div class="banner banner--1">
+
+				<div class="img__container">
+					<img src="https://static.wixstatic.com/media/84770f_074c70ccfa0b48098b3cb614b925fa2f~mv2.gif" alt=""
+						class="img">
+				</div>
+
+				<h2 class='h2'>Zapisy na nowy rok szkolny 2021/22</h2>
+
+				<div class="img__container">
+					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif" alt=""
+						class="img">
+				</div>
+
+				<div class="btn__container btn__container--no-margin">
+					<button class="btn btn--more">Zapisz dziecko</button>
+				</div>
+
+			</div>
+
+			<div class="banner banner--2">
+
+				<div class="container container--space-evenly">
+
+					<div class="img__container">
+						<img src="https://static.wixstatic.com/media/84770f_c8e2952a814b41589750779df9fc670c~mv2.gif"
+							alt="" class="img">
+					</div>
+
+					<h2 class='h2'>Galeria</h2>
+
+				</div>
+
+				<div class="btn__container btn__container--no-margin">
+					<button class="btn btn--more">Obejrzyj zdjęcia</button>
+				</div>
+
+			</div>
+
+			<div class="banner banner--3">
+
+				<div class="img__container">
+					<img src="https://static.wixstatic.com/media/516c037607f54b3587a8f4c2ed4b9d6b.jpg/v1/crop/x_0,y_0,w_3736,h_2848/fill/w_126,h_91,al_c,q_80,usm_0.66_1.00_0.01/Alarm%20Clock.webp"
+						alt="" class="img img--rounded img--border">
+				</div>
+
+				<p class="p">
+					<span class='p p--secondary p--subtitle'>Zajęcia lekcyjne</span>
+					<br>
+					Sobota 8:30 - 16: 00
+					<br>
+					<br>
+					<span class='p p--secondary p--subtitle'>Dyżury sekretariatu</span>
+					<br>
+					Poniedziałek 17:30 - 19:00
+					<br>
+					Piątek 17:30-19: 00
+				</p>
+
+			</div>
+
+			<div class="banner banner--4">
+
+				<div class="img__container">
+					<img src="https://static.wixstatic.com/media/11062b_00978c20f8094fefa00207baec7aba80~mv2.jpg/v1/fill/w_160,h_101,al_c,q_80,usm_0.66_1.00_0.01/Leather%20Wallets.webp"
+						alt="" class="img img--rounded img--border">
+				</div>
+
+				<h2 class='h2'>Płatności</h2>
+
+				<div class="img__container">
+					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif" alt=""
+						class="img">
+				</div>
+
+				<div class="btn__container btn__container--no-margin">
+					<button class="btn btn--more">Zapłać za szkołe</button>
+				</div>
+
+			</div>
 
 		</section>
 
@@ -154,7 +230,9 @@
 				</div>
 
 				<div class="container">
+
 				</div>
+
 			</div>
 
 		</section>
@@ -207,6 +285,8 @@
 		</div>
 
 	</footer>
+
+	<!-- Scripts -->
 
 </body>
 
