Added text between banners

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
 
 			</div>
 
+			<div class="container">
+				<h2 class="h2 text text--blue">Nasza Szkoła powstała z potrzeby serca.</h2>
+			</div>
+
 			<div class="banner banner--3">
 
 				<div class="img__container">
@@ -199,11 +203,6 @@
 				</div>
 
 				<h2 class='h2'>Płatności</h2>
-
-				<div class="img__container">
-					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif" alt=""
-						class="img">
-				</div>
 
 				<div class="btn__container btn__container--no-margin">
 					<button class="btn btn--more">Zapłać za szkołe</button>
