--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 			</div>
 
-			<div class="container">
+			<div class="container container--description">
 				<h2 class="h2 text text--blue">Nasza Szkoła powstała z potrzeby serca.</h2>
 			</div>
 
