Added styling for mobile devices

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
 			</a>
 		</div>
 
+		<!-- Burger button -->
+		<div class="burger__container">
+			<button class="btn btn--burger">
+				<div class="line line--1"></div>
+				<div class="line line--2"></div>
+				<div class="line line--3"></div>
+			</button>
+		</div>
+
 		<!-- Nav links -->
 		<ul class='nav nav--ul'>
 			<li class='nav nav--li'>Strona Główna</li>
@@ -245,7 +254,7 @@
 				<p class="p p--secondary">
 					Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
 				</p>
-				<div class="btn__container">
+				<div class="btn__container btn__container--margin-bottom-0">
 					<button class="btn btn--important">Zapłać za szkołe</button>
 				</div>
 			</div>
@@ -253,7 +262,7 @@
 			<div class="container container--center">
 				<p class='p p--secondary'><a
 						href='https://www.facebook.com/Szko%C5%82a-J%C4%99zyka-Polskiego-im-%C5%9Bw-Siostry-Faustyny-w-Slough-106881168296298'
-						class='a a--social' title='Facebook'>Facebook</a>
+						class='a a--social' title='Facebook' target='_blank'>Facebook</a>
 				</p>
 			</div>
 
@@ -277,8 +286,8 @@
 
 		<div class="container container--copyright">
 			<p class="p p--secondary p--copyright">© 2021 by Szkoła Języka Polskiego Slough</p>
-			<p class="p p--secondary">Strona stworzona przez <a href='https://www.thepixelweb.co.uk' class='a'
-					target='_blank' title='The Pixel Web'>Pixel
+			<p class="p p--secondary p--copyright">Strona stworzona przez <a href='https://www.thepixelweb.co.uk'
+					class='a' target='_blank' title='The Pixel Web'>Pixel
 					Web</a>
 			</p>
 		</div>
