Integrated google maps into website

--- a/index.html
+++ b/index.html
@@ -237,8 +237,10 @@
 					<p class="p p--white">07723 646 812</p>
 				</div>
 
-				<div class="container">
-
+				<div class="container container--map">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9253657095055!2d-0.6129074084195163!3d51.51458523631075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876652abcea74d3%3A0x969bd2387a2cb9c6!2sPolish%20Roman%20Catholic%20Church%20of%20Divine%20Mercy!5e0!3m2!1sen!2suk!4v1625318986319!5m2!1sen!2suk"
+						allowfullscreen="" loading="lazy" class='map'></iframe>
 				</div>
 
 			</div>
@@ -295,6 +297,7 @@
 	</footer>
 
 	<!-- Scripts -->
+	<script src="app.js"></script>
 
 </body>
 
