--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/img1.webp" alt="">
+			<img class='img img--slogan' src="./assets/img1.webp" alt="Pencil case tool">
 		</div>
 
 		<!-- Slogan -->
@@ -70,7 +70,7 @@
 
 		<!-- Image container -->
 		<div class="img__container img__container--header">
-			<img src="./assets/img-heading.webp" alt="" class="img img--header">
+			<img src="./assets/img-heading.webp" alt="Children with pens" class="img img--header">
 		</div>
 
 		<div class="header__content">
@@ -100,14 +100,14 @@
 			<div class="img__container img__container--section">
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.jpg/v1/fill/w_594,h_341,al_c,q_80,usm_0.66_1.00_0.01/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.webp"
-					alt="">
+					alt="Child with an open book">
 			</div>
 
 			<!-- Image container -->
 			<div class="img__container img__container--section img--margin">
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.webp"
-					alt="">
+					alt="Holy Bible opened with text">
 			</div>
 
 			<!-- Image container -->
@@ -120,7 +120,7 @@
 					<!-- Space around container -->
 					<div class="space-around">
 						<div class="img__container img__container--overlay">
-							<img src="./assets/logo.webp" alt="" class="img img--overlay">
+							<img src="./assets/logo.webp" alt="School Logo - St. Faustyna" class="img img--overlay">
 						</div>
 						<div class="btn__container btn__container--small">
 							<button class="btn btn--more">Czytaj więcej</button>
@@ -130,7 +130,7 @@
 
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/62e75bfd762f474ca9a42f40162ebc69.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/62e75bfd762f474ca9a42f40162ebc69.webp"
-					alt="">
+					alt="Praying hands in church">
 			</div>
 
 		</section>
@@ -142,15 +142,15 @@
 			<div class="banner banner--1">
 
 				<div class="img__container">
-					<img src="https://static.wixstatic.com/media/84770f_074c70ccfa0b48098b3cb614b925fa2f~mv2.gif" alt=""
-						class="img">
+					<img src="https://static.wixstatic.com/media/84770f_074c70ccfa0b48098b3cb614b925fa2f~mv2.gif"
+						alt="Animated blue pencil" class="img">
 				</div>
 
 				<h2 class='h2'>Zapisy na nowy rok szkolny 2021/22</h2>
 
 				<div class="img__container">
-					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif" alt=""
-						class="img">
+					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif"
+						alt="Animated seperator" class="img">
 				</div>
 
 				<div class="btn__container btn__container--no-margin">
@@ -165,7 +165,7 @@
 
 					<div class="img__container">
 						<img src="https://static.wixstatic.com/media/84770f_c8e2952a814b41589750779df9fc670c~mv2.gif"
-							alt="" class="img">
+							alt="3 colourfull tears" class="img">
 					</div>
 
 					<h2 class='h2'>Galeria</h2>
@@ -186,7 +186,7 @@
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/516c037607f54b3587a8f4c2ed4b9d6b.jpg/v1/crop/x_0,y_0,w_3736,h_2848/fill/w_126,h_91,al_c,q_80,usm_0.66_1.00_0.01/Alarm%20Clock.webp"
-						alt="" class="img img--rounded img--border">
+						alt="Red alarm clock" class="img img--rounded img--border">
 				</div>
 
 				<p class="p">
@@ -208,7 +208,7 @@
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/11062b_00978c20f8094fefa00207baec7aba80~mv2.jpg/v1/fill/w_160,h_101,al_c,q_80,usm_0.66_1.00_0.01/Leather%20Wallets.webp"
-						alt="" class="img img--rounded img--border">
+						alt="Wallet" class="img img--rounded img--border">
 				</div>
 
 				<h2 class='h2'>Płatności</h2>
@@ -227,14 +227,16 @@
 
 				<div class="container container--address column-center">
 					<h3 class='h3 h3--address p--white'>Tu jestesmy</h3>
-					<p class="p p--white p--left">48 Pitts Road
+					<p class="p p--white p--left p--address">48 Pitts Road
 						<br>
 						SL1 3XH
 						<br>
 						Slough Berkshire
 					</p>
-					<p class="p p--white">info@szkolajezykapolskiegoslough.org</p>
-					<p class="p p--white">07723 646 812</p>
+					<p class="p p--white"><a class='a a--default'
+							href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
+					</p>
+					<p class="p p--white"><a class='a a--default' href='tel:07723646812'>07723 646 812</a></p>
 				</div>
 
 				<div class="container container--map">
