Added some javascript to toggle the navigation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<!-- Burger button -->
-		<div class="burger__container">
+		<div class="burger__container" id='btn__burger'>
 			<button class="btn btn--burger">
 				<div class="line line--1"></div>
 				<div class="line line--2"></div>
@@ -55,8 +55,8 @@
 		</div>
 
 		<!-- Nav links -->
-		<ul class='nav nav--ul'>
-			<li class='nav nav--li'>Strona Główna</li>
+		<ul class='nav nav--ul nav--hidden' id='navigation__menu'>
+			<li class='nav nav--li nav--active'>Strona Główna</li>
 			<li class='nav nav--li'>Faustyna Kowalska</li>
 			<li class='nav nav--li'>Kalendarz</li>
 			<li class='nav nav--li'>Opłaty</li>
