--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Slogan -->
 		<div class="slogan">
-			<a href="#" class='a a--h1'>
+			<a href="index.html" class='a a--h1'>
 				<h1 class='h1'><span class='single-line'>Szkoła Języka Polskiego</span> <span class="single-line">im.
 						św.
 						Siostry</span> Faustyny w Slough</h1>
@@ -56,12 +56,12 @@
 
 		<!-- Nav links -->
 		<ul class='nav nav--ul nav--hidden' id='navigation__menu'>
-			<li class='nav nav--li nav--active'>Strona Główna</li>
-			<li class='nav nav--li'>Faustyna Kowalska</li>
-			<li class='nav nav--li'>Kalendarz</li>
-			<li class='nav nav--li'>Opłaty</li>
-			<li class='nav nav--li'>O nas</li>
-			<li class='nav nav--li'>Kontakt</li>
+			<li class='nav nav--li'><a href='index.html' class='a a--link a--active'>Strona Główna</a></li>
+			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Faustyna Kowalska</a></li>
+			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
+			<li class='nav nav--li'><a href='oplaty.html' class='a a--link'>Opłaty</a></li>
+			<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
+			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
 		</ul>
 	</nav>
 
@@ -291,7 +291,7 @@
 		<div class="container container--copyright">
 			<p class="p p--secondary p--copyright">© 2021 by Szkoła Języka Polskiego Slough</p>
 			<p class="p p--secondary p--copyright">Strona stworzona przez <a href='https://www.thepixelweb.co.uk'
-					class='a' target='_blank' title='The Pixel Web'>Pixel
+					class='a a--social' target='_blank' title='The Pixel Web'>Pixel
 					Web</a>
 			</p>
 		</div>
