--- a/kalendarz.html
+++ b/kalendarz.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Patron | SJPS</title>
+	<title>Kalendarz | SJPS</title>
 	<meta name="description"
 		content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough rozpocznie swoja dzialalnosc we wrzesniu 2021 przy Polskiej Parafii w Slough.">
 	<meta property="og:title" content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough">
@@ -57,8 +57,8 @@
 		<!-- Nav links -->
 		<ul class='nav nav--ul nav--hidden' id='navigation__menu'>
 			<li class='nav nav--li'><a href='index.html' class='a a--link'>Strona Główna</a></li>
-			<li class='nav nav--li'><a href='patron.html' class='a a--link a--active'>Faustyna Kowalska</a></li>
-			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
+			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Faustyna Kowalska</a></li>
+			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link a--active'>Kalendarz</a></li>
 			<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
 			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
 		</ul>
@@ -71,16 +71,12 @@
 
             <div class="container container--space-evenly">
 
-                <div class="img__container img__container--stretch margin">
-                    <img src="https://static.wixstatic.com/media/970db9_fa3c99661a494a1abfe14b519921f6f3~mv2.png/v1/fill/w_306,h_433,al_c,q_85,usm_0.66_1.00_0.01/1.webp" alt="Sw. Faustyna" class="img">
+                <div class="img__container">
+                    <img src="./assets/kalendarz1.webp" alt="Szkolny kalendarz" class="img">
                 </div>
-                
-                <div class="img__container img__container--stretch margin">
-                    <img src="https://static.wixstatic.com/media/970db9_3503085280064c9cb7d7b5c686668d0a~mv2.png/v1/fill/w_306,h_433,al_c,q_85,usm_0.66_1.00_0.01/2%20zdjecie.webp" alt="Sw. Faustyna" class="img">
-                </div>
-                
-                <div class="img__container img__container--stretch margin">
-                    <img src="https://static.wixstatic.com/media/970db9_4aae1d91b8ea4d269f5ffee110fd7a8a~mv2.png/v1/fill/w_306,h_433,al_c,q_85,usm_0.66_1.00_0.01/3.webp" alt="Sw. Faustyna" class="img">
+
+                <div class="img__container">
+                    <img src="./assets/kalendarz2.webp" alt="Szkolny kalendarz" class="img">
                 </div>
 
             </div>
