Added the contact page and its content

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			</p>
 
 			<div class="btn__container">
-				<button class="btn">Czytaj Więcej</button>
+				<button class="btn"><a class='a a--default' href='o-nas.html'>Czytaj Więcej</a></button>
 			</div>
 		</div>
 
@@ -122,7 +122,7 @@
 							<img src="./assets/logo.webp" alt="School Logo - St. Faustyna" class="img img--overlay">
 						</div>
 						<div class="btn__container btn__container--small">
-							<button class="btn btn--more">Czytaj więcej</button>
+							<button class="btn btn--more"><a class='a a--default' href='patron.html'>Czytaj więcej</a></button>
 						</div>
 					</div>
 				</div>
