--- a/zapisy.html
+++ b/zapisy.html
@@ -59,7 +59,7 @@
 			<li class='nav nav--li'><a href='index.html' class='a a--link'>Strona Główna</a></li>
 			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Faustyna Kowalska</a></li>
 			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
-			<li class='nav nav--li'><a href='o-nas.html' class='a a--link a--active'>O nas</a></li>
+			<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
 			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
 		</ul>
 	</nav>
