--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 			</div>
 
-			<div class="banner banner--4">
+			<div class="banner banner--4 disabled">
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/11062b_00978c20f8094fefa00207baec7aba80~mv2.jpg/v1/fill/w_160,h_101,al_c,q_80,usm_0.66_1.00_0.01/Leather%20Wallets.webp"
@@ -216,7 +216,7 @@
 				<h2 class='h2'>Płatności</h2>
 
 				<div class="btn__container btn__container--no-margin">
-					<button class="btn btn--more">Zapłać za szkołe</button>
+					<button class="btn btn--more btn--disabled">Zapłać za szkołe</button>
 				</div>
 
 			</div>
