Added functionality to close modal when user clicks outside of the image

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 			</p>
 
 			<div class="btn__container">
-				<button class="btn"><a class='a a--default' href='o-nas.html'>Czytaj Więcej</a></button>
+				<a class='a a--default' href='o-nas.html'>
+					<button class="btn">Czytaj Więcej</button>
+				</a>
 			</div>
 		</div>
 
