--- a/kalendarz.html
+++ b/kalendarz.html
@@ -63,7 +63,7 @@
 			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
 		</ul>
 	</nav>
-	
+
 	<!-- Modal for bigger image -->
 	<div class="modal__container hidden" id='modal__container'>
 
@@ -76,23 +76,23 @@
 	<!-- Main content -->
 	<main class='main'>
 
-        <section class="section section--center">
+		<section class="section section--center">
 
 			<h2 class="h2 h2--title">Kalendarz na rok 2021/22</h2>
 
-            <div class="container container--space-evenly">
+			<div class="container container--space-evenly">
 
-                <div class="img__container">
-                    <img src="./assets/kalendarz1.webp" alt="Szkolny kalendarz" class="img in-modal">
-                </div>
+				<div class="img__container">
+					<img src="./assets/kalendarz1.webp" alt="Szkolny kalendarz" class="img in-modal">
+				</div>
 
-                <div class="img__container">
-                    <img src="./assets/kalendarz2.webp" alt="Szkolny kalendarz" class="img in-modal">
-                </div>
+				<div class="img__container">
+					<img src="./assets/kalendarz2.webp" alt="Szkolny kalendarz" class="img in-modal">
+				</div>
 
-            </div>
+			</div>
 
-        </section>
+		</section>
 
 	</main>
 
@@ -100,12 +100,12 @@
 
 		<div class="footer__wrapper">
 			<div class="container container--left">
-				<p class="p p--secondary">
+				<!-- <p class="p p--secondary">
 					Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
 				</p>
 				<div class="btn__container btn__container--margin-bottom-0">
 					<button class="btn btn--important">Zapłać za szkołe</button>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="container container--center">
