--- a/kontakt.html
+++ b/kontakt.html
@@ -67,46 +67,46 @@
 	<!-- Main content -->
 	<main class='main'>
 
-        <!-- Section -->
-        <section class="section">
+		<!-- Section -->
+		<section class="section">
 
-            <div class="container container--text">
+			<div class="container container--text">
 
-                <h2 class='h2 h2--title'>Tu jesteśmy</h2>
-                
-                <p class="p p--left p--address">
-                    48 Pitts Road
-                    <br>
-                    Slough 
-                    <br>
-                    SL1 3XH
-                    <br>
-                    Berkshire
-                </p>
+				<h2 class='h2 h2--title'>Tu jesteśmy</h2>
 
-                <br>
+				<p class="p p--left p--address">
+					48 Pitts Road
+					<br>
+					Slough
+					<br>
+					SL1 3XH
+					<br>
+					Berkshire
+				</p>
 
-                <div class="container container--narrow">
-                    <p class="p p--left">Email: <a class='a'
-                        href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
-                    </p>
+				<br>
 
-                    <br>
+				<div class="container container--narrow">
+					<p class="p p--left">Email: <a class='a'
+							href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
+					</p>
 
-                    <p class="p p--left inline-block">Telefon: <a class='a' href='tel:07723646812'>07723 646 812</a></p>
+					<br>
 
-                </div>
-            </div>
+					<p class="p p--left inline-block">Telefon: <a class='a' href='tel:07723646812'>07723 646 812</a></p>
 
-            <div class="container">
-                <div class="container container--map">
+				</div>
+			</div>
+
+			<div class="container">
+				<div class="container container--map">
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9253657095055!2d-0.6129074084195163!3d51.51458523631075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876652abcea74d3%3A0x969bd2387a2cb9c6!2sPolish%20Roman%20Catholic%20Church%20of%20Divine%20Mercy!5e0!3m2!1sen!2suk!4v1625318986319!5m2!1sen!2suk"
 						allowfullscreen="" loading="lazy" class='map'></iframe>
 				</div>
-            </div>
-            
-        </section>
+			</div>
+
+		</section>
 
 	</main>
 
@@ -114,12 +114,12 @@
 
 		<div class="footer__wrapper">
 			<div class="container container--left">
-				<p class="p p--secondary">
+				<!-- <p class="p p--secondary">
 					Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
 				</p>
 				<div class="btn__container btn__container--margin-bottom-0">
 					<button class="btn btn--important">Zapłać za szkołe</button>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="container container--center">
@@ -134,7 +134,7 @@
 
 				<!-- Form container -->
 				<form class="form">
-					<div class="input__container"> 
+					<div class="input__container">
 						<input type="email" class="input" minlength="3" placeholder='Podaj swoj adres email' required>
 					</div>
 					<div class="btn__container btn__container--submit">
