--- a/o-nas.html
+++ b/o-nas.html
@@ -67,32 +67,45 @@
 	<!-- Main content -->
 	<main class='main'>
 
-        <!-- Section -->
-        <section class="section section--center">
+		<!-- Section -->
+		<section class="section section--center">
 
-            <div class="container container--narrow">
-                <h2 class='h2 h2--title'>O nas</h2>
+			<div class="container container--narrow">
+				<h2 class='h2 h2--title'>O nas</h2>
 
-                <p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough  zrodziła się w grudniu 2020  roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów zawitała w progach kościoła w Slough.
-                    <br>
-                    <br>
-                    Magdalena Witkowska pełni funkcje dyrektora ds. edukacyjnych, a Lukasz Jankiewicz jest dyrektorem ds. finansowych.
-                     <br>
-                    <br>
-                    Rozpoczęcie działalności szkoły jest zaplanowane na 11 września 2021 roku.
-                     <br>
-                    <br>
-                    Głównym założeniem szkoły  jest nauczanie języka polskiego, geografii i historii Polski, oraz nauczanie wiary zgodnie z założeniami Kościoła Katolickiego. Nauczanie i wychowywanie dzieci i młodzieży w duchu patriotyzmu oraz moralności i kultury osobistej. Kultywowanie tradycji i kultury polskiej. Promowanie kultury polskiej wśród lokalnej społeczności.
-                     <br>
-                    <br>
-                    Wzbudzanie w młodym człowieku szacunku do samego siebie i innych oraz otaczającego go świata.</p>
-            </div>
+				<p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough zrodziła
+					się w grudniu 2020 roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów
+					zawitała
+					<br>
+					w progach kościoła w Slough.
+					<br>
+					<br>
+					Magdalena Witkowska pełni funkcje dyrektora ds. edukacyjnych, a Łukasz Jankiewicz jest dyrektorem
+					<br>
+					ds. finansowych.
+					<br>
+					<br>
+					Rozpoczęcie działalności szkoły jest zaplanowane na 11 września 2021 roku.
+					<br>
+					<br>
+					Głównym założeniem szkoły jest nauczanie języka polskiego, geografii i historii Polski oraz
+					nauczanie wiary zgodnie z założeniami Kościoła Katolickiego. Nauczanie i wychowywanie dzieci i
+					młodzieży
+					<br>
+					w duchu patriotyzmu oraz moralności i kultury osobistej. Kultywowanie i promowanie tradycji, a także
+					kultury polskiej wśród lokalnej społeczności.
+					<br>
+					<br>
+					Wzbudzanie w młodym człowieku szacunku do samego siebie i innych oraz otaczającego go świata.
+				</p>
+			</div>
 
-            <div class="img__container img__container--70">
-                <img src="https://static.wixstatic.com/media/cda177_a8524a842da4464fac8f2c0fa6e71bb9.jpg/v1/fill/w_940,h_409,al_c,q_85,usm_0.66_1.00_0.01/cda177_a8524a842da4464fac8f2c0fa6e71bb9.webp" alt="" class="img img--o-nas">
-            </div>
-            
-        </section>
+			<div class="img__container img__container--70">
+				<img src="https://static.wixstatic.com/media/cda177_a8524a842da4464fac8f2c0fa6e71bb9.jpg/v1/fill/w_940,h_409,al_c,q_85,usm_0.66_1.00_0.01/cda177_a8524a842da4464fac8f2c0fa6e71bb9.webp"
+					alt="" class="img img--o-nas">
+			</div>
+
+		</section>
 
 	</main>
 
@@ -100,12 +113,12 @@
 
 		<div class="footer__wrapper">
 			<div class="container container--left">
-				<p class="p p--secondary">
+				<!-- <p class="p p--secondary">
 					Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
 				</p>
 				<div class="btn__container btn__container--margin-bottom-0">
 					<button class="btn btn--important">Zapłać za szkołe</button>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="container container--center">
@@ -120,7 +133,7 @@
 
 				<!-- Form container -->
 				<form class="form">
-					<div class="input__container"> 
+					<div class="input__container">
 						<input type="email" class="input" minlength="3" placeholder='Podaj swoj adres email' required>
 					</div>
 					<div class="btn__container btn__container--submit">
