--- a/zapisy.html
+++ b/zapisy.html
@@ -67,23 +67,25 @@
 	<!-- Main content -->
 	<main class='main'>
 
-        <!-- Section -->
-        <section class="section section--center">
+		<!-- Section -->
+		<section class="section section--center">
 
-            <div class="container container--narrow margin--top-bottom">
-                <h2 class='h2 h2--title'>Zapisz dziecko</h2>
+			<div class="container container--narrow margin--top-bottom">
+				<h2 class='h2 h2--title'>Zapisz dziecko</h2>
 
-                <p class='p p--left'>
-                    Jesli chcą państwo zapisać swoje dziecko do naszej szkoły,
-                    serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go, oraz wysłanie na nasz email: <p class="p p--white"><a class='a a--default'
-                        href='mailto:info@szkolajezykapolskiegoslough.org?subject=Formularz Rejestracyjny'>info@szkolajezykapolskiegoslough.org</a>
-                </p>
-                </p>
-            </div>
+				<p class='p p--left'>
+					Jesli chcą państwo zapisać swoje dziecko do naszej szkoły,
+					serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go, oraz wysłanie na nasz
+					email:
+				<p class="p p--white"><a class='a a--default'
+						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Formularz Rejestracyjny'>info@szkolajezykapolskiegoslough.org</a>
+				</p>
+				</p>
+			</div>
 
-          <iframe src="./formularz-rejestracyjny.pdf" frameborder="0" class='pdf'></iframe>
-            
-        </section>
+			<iframe src="./formularz-rejestracyjny.pdf" frameborder="0" class='pdf'></iframe>
+
+		</section>
 
 	</main>
 
@@ -91,12 +93,12 @@
 
 		<div class="footer__wrapper">
 			<div class="container container--left">
-				<p class="p p--secondary">
+				<!-- <p class="p p--secondary">
 					Akceptujemy płatności kartami debetowymi oraz przelewem na konto szkoły
 				</p>
 				<div class="btn__container btn__container--margin-bottom-0">
 					<button class="btn btn--important">Zapłać za szkołe</button>
-				</div>
+				</div> -->
 			</div>
 
 			<div class="container container--center">
@@ -111,7 +113,7 @@
 
 				<!-- Form container -->
 				<form class="form">
-					<div class="input__container"> 
+					<div class="input__container">
 						<input type="email" class="input" minlength="3" placeholder='Podaj swoj adres email' required>
 					</div>
 					<div class="btn__container btn__container--submit">
