--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/img1.webp" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
 		</div>
 
 		<!-- Slogan -->
@@ -44,7 +44,7 @@
 			<a href="index.html" class='a a--h1'>
 				<h1 class='h1'><span class='single-line'>Szkoła Języka Polskiego</span> <span class="single-line">im.
 						św.
-						Siostry</span> Faustyny w Slough</h1>
+						Siostry</span> Faustyny <span class="single-line">w Slough</span></h1>
 			</a>
 		</div>
 
@@ -124,7 +124,7 @@
 					<!-- Space around container -->
 					<div class="space-around">
 						<div class="img__container img__container--overlay">
-							<img src="./assets/logo.webp" alt="School Logo - St. Faustyna" class="img img--overlay">
+							<img src="./assets/logo.png" alt="School Logo - St. Faustyna" class="img">
 						</div>
 						<div class="btn__container btn__container--small">
 							<button class="btn btn--more"><a class='a a--default' href='patron.html'>Czytaj
