--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
 		<!-- Nav links -->
 		<ul class='nav nav--ul nav--hidden' id='navigation__menu'>
 			<li class='nav nav--li'><a href='index.html' class='a a--link a--active'>Strona Główna</a></li>
-			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Faustyna Kowalska</a></li>
+			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Patronka</a></li>
+			<li class='nav nav--li'><a href='zapisy.html' class='a a--link'>Zapisy</a></li>
+			<li class='nav nav--li'><a href='oplaty.html' class='a a--link'>Opłaty</a></li>
+			<li class='nav nav--li'><a href='dokumenty.html' class='a a--link'>Dokumenty</a></li>
 			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
-			<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
-			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
+			<div class="nav--li__container">
+				<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
+				<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
+			</div>
+
 		</ul>
 	</nav>
 
