--- a/oplaty.html
+++ b/oplaty.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>O nas | SJPS</title>
+	<title>Opłaty za szkołe | SJPS</title>
 	<meta name="description"
 		content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough rozpocznie swoja dzialalnosc we wrzesniu 2021 przy Polskiej Parafii w Slough.">
 	<meta property="og:title" content="Szkola Języka Polskiego im. św. Siostry Faustyny w Slough">
@@ -59,11 +59,11 @@
 			<li class='nav nav--li'><a href='index.html' class='a a--link'>Strona Główna</a></li>
 			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Patronka</a></li>
 			<li class='nav nav--li'><a href='zapisy.html' class='a a--link'>Zapisy</a></li>
-			<li class='nav nav--li'><a href='oplaty.html' class='a a--link'>Opłaty</a></li>
+			<li class='nav nav--li'><a href='oplaty.html' class='a a--link a--active'>Opłaty</a></li>
 			<li class='nav nav--li'><a href='dokumenty.html' class='a a--link'>Dokumenty</a></li>
 			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
 			<div class="nav--li__container">
-				<li class='nav nav--li'><a href='o-nas.html' class='a a--link a--active'>O nas</a></li>
+				<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
 				<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
 			</div>
 
@@ -77,7 +77,7 @@
 		<section class="section section--center">
 
 			<div class="container container--narrow">
-				<h2 class='h2 h2--title'>O nas</h2>
+				<h2 class='h2 h2--title'>Opłaty za szkołe</h2>
 
 				<p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough zrodziła
 					się w grudniu 2020 roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów
