--- a/zapisy.html
+++ b/zapisy.html
@@ -33,7 +33,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/img1.webp" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
 		</div>
 
 		<!-- Slogan -->
@@ -41,7 +41,7 @@
 			<a href="index.html" class='a a--h1'>
 				<h1 class='h1'><span class='single-line'>Szkoła Języka Polskiego</span> <span class="single-line">im.
 						św.
-						Siostry</span> Faustyny w Slough</h1>
+						Siostry</span> Faustyny <span class="single-line">w Slough</span></h1>
 			</a>
 		</div>
 
@@ -57,10 +57,16 @@
 		<!-- Nav links -->
 		<ul class='nav nav--ul nav--hidden' id='navigation__menu'>
 			<li class='nav nav--li'><a href='index.html' class='a a--link'>Strona Główna</a></li>
-			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Faustyna Kowalska</a></li>
+			<li class='nav nav--li'><a href='patron.html' class='a a--link'>Patronka</a></li>
+			<li class='nav nav--li'><a href='zapisy.html' class='a a--link a--active'>Zapisy</a></li>
+			<li class='nav nav--li'><a href='oplaty.html' class='a a--link'>Opłaty</a></li>
+			<li class='nav nav--li'><a href='dokumenty.html' class='a a--link'>Dokumenty</a></li>
 			<li class='nav nav--li'><a href='kalendarz.html' class='a a--link'>Kalendarz</a></li>
-			<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
-			<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
+			<div class="nav--li__container">
+				<li class='nav nav--li'><a href='o-nas.html' class='a a--link'>O nas</a></li>
+				<li class='nav nav--li'><a href="kontakt.html" class='a a--link'>Kontakt</a></li>
+			</div>
+
 		</ul>
 	</nav>
 
@@ -74,10 +80,10 @@
 				<h2 class='h2 h2--title'>Zapisz dziecko</h2>
 
 				<p class='p p--left'>
-					Jesli chcą państwo zapisać swoje dziecko do naszej szkoły,
-					serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go, oraz wysłanie na nasz
+					Jesli chcą Państwo zapisać swoje dziecko do naszej szkoły,
+					serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go oraz wysłanie na nasz
 					email:
-				<p class="p p--white"><a class='a a--default'
+				<p class="p"><a class='a'
 						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Formularz Rejestracyjny'>info@szkolajezykapolskiegoslough.org</a>
 				</p>
 				</p>
