--- a/zapisy.html
+++ b/zapisy.html
@@ -24,6 +24,7 @@
 		content="https://static.wixstatic.com/media/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png/v1/fill/w_500,h_500,al_c/970db9_6de97b650c8e4c3c90e6e0999f0622cf~mv2.png">
 	<link rel="canonical" href="https://www.szkolajezykapolskiegoslough.org/" />
 	<link rel="stylesheet" href="./style/style.css">
+	<link rel="icon" href="./assets/logo.png" type="image/png">
 </head>
 
 <body>
