Adding content to the payments page

--- a/oplaty.html
+++ b/oplaty.html
@@ -80,30 +80,26 @@
 			<div class="container container--narrow">
 				<h2 class='h2 h2--title'>Opłaty za szkołe</h2>
 
-				<p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough zrodziła
-					się w grudniu 2020 roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów
-					zawitała
+				<p class='p p--left'>
+					Opłaty za szkole w roku szkolnym 2021/22 wynosza:
 					<br>
-					w progach kościoła w Slough.
+					Pierwsze dziecko £285 za rok
 					<br>
+					Drugie dziecko £210 za rok
 					<br>
-					Magdalena Witkowska pełni funkcje dyrektora ds. edukacyjnych, a Łukasz Jankiewicz jest dyrektorem
+					Trzecie dziecko £160 za rok
 					<br>
-					ds. finansowych.
+					Zapisujac dziecko do szkoly nalezy wplacic depozyt w wysoksci £50 do 20 sierpnia 2021 roku, oplata
+					za czesne bedzie pomniejszona o kwote wczesniej wplaconego depozytu. Warunkiem kontynuowania nauki w
+					szkole jest
+					uregulowanie calej kwoty za pierwsze dziecko do konca wrzesnia 2021, a za drugie i trzecie dziecko
+					do 31 pazdziernika 2021. W przypadku rezygnacji ze szkoly w trakcie roku szkolnego, oplaty nie beda
+					zwracane.
 					<br>
+					W przypadku jakichkolwiek watpliwosci, prosimy o kontakt na adres e-mail:
+					szkolajezykapolskiegoslough@gmail.com.
 					<br>
-					Rozpoczęcie działalności szkoły jest zaplanowane na 11 września 2021 roku.
-					<br>
-					<br>
-					Głównym założeniem szkoły jest nauczanie języka polskiego, geografii i historii Polski oraz
-					nauczanie wiary zgodnie z założeniami Kościoła Katolickiego. Nauczanie i wychowywanie dzieci i
-					młodzieży
-					<br>
-					w duchu patriotyzmu oraz moralności i kultury osobistej. Kultywowanie i promowanie tradycji, a także
-					kultury polskiej wśród lokalnej społeczności.
-					<br>
-					<br>
-					Wzbudzanie w młodym człowieku szacunku do samego siebie i innych oraz otaczającego go świata.
+					*Koszt podrecznikow szkolnych nie jest wliczany w oplate za szkole.
 				</p>
 			</div>
 
