--- a/oplaty.html
+++ b/oplaty.html
@@ -75,37 +75,55 @@
 	<main class='main'>
 
 		<!-- Section -->
-		<section class="section section--center">
+		<section class="section section--center section--no-background">
 
 			<div class="container container--narrow">
-				<h2 class='h2 h2--title'>Opłaty za szkołe</h2>
+				<h2 class='h2 h2--title'>Czesne i Terminy Płatności</h2>
 
 				<p class='p p--left'>
-					Opłaty za szkole w roku szkolnym 2021/22 wynosza:
+					<strong>Opłaty za szkole w roku szkolnym 2021/22 wynosza:</strong>
 					<br>
-					Pierwsze dziecko £285 za rok
 					<br>
-					Drugie dziecko £210 za rok
+				</p>
+				<ul>
+					<li>Pierwsze dziecko £285 / rok</li>
+					<li>Drugie dziecko £210 / rok</li>
+					<li>Trzecie i kazde kolejne dziecko £160 / rok</li>
+				</ul>
+				<p class="p p--left">
 					<br>
-					Trzecie dziecko £160 za rok
 					<br>
 					Zapisujac dziecko do szkoly nalezy wplacic depozyt w wysoksci £50 do 20 sierpnia 2021 roku, oplata
-					za czesne bedzie pomniejszona o kwote wczesniej wplaconego depozytu. Warunkiem kontynuowania nauki w
-					szkole jest
-					uregulowanie calej kwoty za pierwsze dziecko do konca wrzesnia 2021, a za drugie i trzecie dziecko
-					do 31 pazdziernika 2021. W przypadku rezygnacji ze szkoly w trakcie roku szkolnego, oplaty nie beda
+					za czesne bedzie pomniejszona o kwote wczesniej wplaconego depozytu.
+					<br>
+					<br>
+					Warunkiem kontynuowania nauki w
+					szkole jest uregulowanie calej kwoty za pierwsze dziecko do konca wrzesnia 2021, a za drugie i
+					trzecie
+					dziecko do 31 pazdziernika 2021. W przypadku rezygnacji ze szkoly w trakcie roku szkolnego, oplaty
+					nie
+					beda
 					zwracane.
+					<br>
 					<br>
 					W przypadku jakichkolwiek watpliwosci, prosimy o kontakt na adres e-mail:
 					szkolajezykapolskiegoslough@gmail.com.
 					<br>
+					<br>
 					*Koszt podrecznikow szkolnych nie jest wliczany w oplate za szkole.
+					<br>
+					<br>
+					<strong>Dane konta bankowego</strong>
+					<br>
+					<strong>Numer konta: 53427927</strong>
+					<br>
+					<strong>Sort Code: 20 - 78 - 61</strong>
+					<br>
+					<br>
+					<strong>Czesne tytułem:</strong> Imie i nazwisko ucznia + aktualna klasa + czesne / depozyt
+					<br>
+					(np. Anna Nowak Kl.2 czesne)
 				</p>
-			</div>
-
-			<div class="img__container img__container--70">
-				<img src="https://static.wixstatic.com/media/cda177_a8524a842da4464fac8f2c0fa6e71bb9.jpg/v1/fill/w_940,h_409,al_c,q_85,usm_0.66_1.00_0.01/cda177_a8524a842da4464fac8f2c0fa6e71bb9.webp"
-					alt="" class="img img--o-nas">
 			</div>
 
 		</section>
