Changed some section styling and corrected content

--- a/oplaty.html
+++ b/oplaty.html
@@ -81,48 +81,49 @@
 				<h2 class='h2 h2--title'>Czesne i Terminy Płatności</h2>
 
 				<p class='p p--left'>
-					<strong>Opłaty za szkole w roku szkolnym 2021/22 wynosza:</strong>
+					<strong>Opłaty za szkołe w roku szkolnym 2021/22 wynoszą:</strong>
 					<br>
 					<br>
 				</p>
-				<ul>
-					<li>Pierwsze dziecko £285 / rok</li>
-					<li>Drugie dziecko £210 / rok</li>
-					<li>Trzecie i kazde kolejne dziecko £160 / rok</li>
+
+				<ul class='ul'>
+					<li class='li'>Pierwsze dziecko £285 / rok</li>
+					<li class='li'>Drugie dziecko £210 / rok</li>
+					<li class='li'>Trzecie i każde kolejne dziecko £160 / rok</li>
 				</ul>
+
 				<p class="p p--left">
 					<br>
-					<br>
-					Zapisujac dziecko do szkoly nalezy wplacic depozyt w wysoksci £50 do 20 sierpnia 2021 roku, oplata
-					za czesne bedzie pomniejszona o kwote wczesniej wplaconego depozytu.
-					<br>
-					<br>
-					Warunkiem kontynuowania nauki w
-					szkole jest uregulowanie calej kwoty za pierwsze dziecko do konca wrzesnia 2021, a za drugie i
-					trzecie
-					dziecko do 31 pazdziernika 2021. W przypadku rezygnacji ze szkoly w trakcie roku szkolnego, oplaty
-					nie
-					beda
-					zwracane.
+					Zapisując dziecko do szkoły należy wpłacić depozyt w wysokości £50 do 20 sierpnia 2021 roku, opłata
+					za czesne będzie pomniejszona o kwote wczesniej wpłaconego depozytu.
 					<br>
 					<br>
-					W przypadku jakichkolwiek watpliwosci, prosimy o kontakt na adres e-mail:
-					szkolajezykapolskiegoslough@gmail.com.
+					Warunkiem kontynuowania nauki w szkole jest uregulowanie całej kwoty za pierwsze dziecko do końca
+					wrzesnia 2021, a za drugie i trzecie dziecko do 31 października 2021. W przypadku rezygnacji ze
+					szkoły w trakcie roku szkolnego, opłaty nie bedą zwracane.
 					<br>
 					<br>
-					*Koszt podrecznikow szkolnych nie jest wliczany w oplate za szkole.
+					W przypadku jakichkolwiek wątpliwości, prosimy o kontakt na adres e-mail:
+					<a class='a a--social'
+						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
 					<br>
 					<br>
-					<strong>Dane konta bankowego</strong>
+					<em>
+						*Koszt podręcznikow szkolnych nie jest wliczany w opłate za szkołe.
+					</em>
+					<br>
+					<br>
+					<strong><span class='text text--underline'>Dane konta bankowego</span></strong>
 					<br>
 					<strong>Numer konta: 53427927</strong>
 					<br>
 					<strong>Sort Code: 20 - 78 - 61</strong>
 					<br>
 					<br>
-					<strong>Czesne tytułem:</strong> Imie i nazwisko ucznia + aktualna klasa + czesne / depozyt
+					<strong><em>Czesne tytułem:</strong> Imie i nazwisko ucznia + aktualna klasa + czesne / depozyt
 					<br>
-					(np. Anna Nowak Kl.2 czesne)
+					(np. Anna Nowak Kl.2 czesne)
+					</em>
 				</p>
 			</div>
 
