Added footer background to distinguish footer and main content

--- a/zapisy.html
+++ b/zapisy.html
@@ -84,7 +84,7 @@
 					Jesli chcą Państwo zapisać swoje dziecko do naszej szkoły,
 					serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go oraz wysłanie na nasz
 					email:
-				<p class="p"><a class='a'
+					<a class='a'
 						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Formularz Rejestracyjny'>info@szkolajezykapolskiegoslough.org</a>
 				</p>
 				</p>
